--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@nimiq/core-web": "^1.4.3",
     "vue": "^2.6.6"
   },
   "devDependencies": {
